[WCMSFEQ-1071] FIXUP (DCEG) Adding page-break rules to prevent print page cutoffs (#219)

--- a/DCEG/Stylesheets/layout-print.css
+++ b/DCEG/Stylesheets/layout-print.css
@@ -10,6 +10,15 @@
 	====
 */
 
+@media print {
+	/* Content was being split between pages. This prevents that (at the cost of additional whitespace) */
+	p {
+		page-break-before: auto;
+		page-break-after: auto;
+		page-break-inside: avoid;
+	}
+}
+
 body {
 	font-size: 16px;
 }
